fix bug in users

--- a/config/nginx/conf/campaigns.conf
+++ b/config/nginx/conf/campaigns.conf
@@ -6,7 +6,7 @@ upstream web {
 
 server {
   listen 80;
-  server_name localhost 127.0.0.1 68.183.62.143 campaigns.diegoasencio.co;
+  server_name 127.0.0.1 68.183.62.143 campaigns.diegoasencio.co;
   client_max_body_size 100M;
 
   location / {
